<resources>
    <string name="app_name">Sokol</string>

    <string name="action_logout">Logout</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_with_facebook">Sign In with Facebook</string>
    <string name="login_with_google">Sign In with Google+</string>
    <string name="login_with_twitter">Sign In with Twitter</string>
    <string name="login_sign_in_with_password">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_loading">Loading</string>
    <string name="login_authenticating">Authenticating</string>

    <string name="login_error_email">The specified email is incorrect.</string>
    <string name="login_error_password">The specified password is incorrect.</string>
    <string name="login_password_reset_title">Reset password</string>
    <string name="login_password_reset_message">Send a new password to %1$s ?</string>

    <string name="provider_sokol">password</string>
    <string name="provider_facebook">facebook.com</string>
    <string name="provider_google">google.com</string>
    <string name="provider_twitter">twitter.com</string>
    <string name="title_activity_base">Home</string>

    <string name="db_users_users" translatable="false">users</string>
    <string name="db_users_name" translatable="false">name</string>
    <string name="db_users_email" translatable="false">email</string>
    <string name="db_users_profile_image" translatable="false">profileImage</string>
    <string name="db_users_provider" translatable="false">provider</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_news_title">News</string>
    <string name="nav_admin_title">Admin</string>
    <string name="nav_user_title">User</string>
    <string name="nav_viewer_title">Viewer</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_logout_title">Log out</string>
    <string name="nav_drawer_opened" translatable="false">Open</string>
    <string name="nav_drawer_closed" translatable="false">Closed</string>

    <string name="base_logout_title">Log out</string>
    <string name="base_logout_message">Do you want to log out?</string>

    <string name="preference_logout" translatable="false">LOGOUT</string>

    <string name="title_activity_profile">Profile</string>
    <string name="profile_data_user_title">Data user</string>
    <string name="profile_password_title">Password</string>
    <string name="profile_password_change_title">Change your password</string>

    <string name="title_activity_create_route">Create route</string>
    <string name="create_route_data_title">Data route</string>
    <string name="create_route_name">Name</string>
    <string name="create_route_invalid_input">Invalid input</string>
    <string name="create_route_desc">Description</string>
    <string name="create_route_info">Info</string>
    <string name="create_route_users">Users</string>
    <string name="create_route_save">Save</string>
    <string name="create_route_points">Points</string>
    <string name="create_route_info_window_title">Marker data - %1$s</string>
    <string name="create_route_info_window_name_title">Name</string>
    <string name="create_route_info_window_checkpoint_title">Checkpoint</string>
    <string name="create_route_info_window_delete_title">Delete</string>
    <string name="title_activity_create_route_maps">Map</string>
    <string name="create_route_info_window_latitude_title">Latitude: %1$s</string>
    <string name="create_route_info_window_longitude_title">Longitude: %1$s</string>

    <string name="db_routes" translatable="false">routes</string>
    <string name="db_user_by_routes" translatable="false">userByRoutes</string>
    <string name="create_route_maps_uid" translatable="false">UID_ROUTE</string>

</resources>
