<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_data_user_title"
        android:id="@+id/textView"
        android:paddingBottom="8dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/profile_data_user_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_header_padding">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/card_profile_image_size"
                android:layout_height="@dimen/card_profile_image_size"
                android:id="@+id/profile_data_user_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_data_user_name"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/profile_data_user_image"
                android:layout_toEndOf="@+id/profile_data_user_image"
                android:textColor="@color/primary_dark_material_dark"
                android:paddingLeft="@dimen/header_left_padding"
                android:textSize="@dimen/card_header_title_text_size"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_data_user_email"
                android:layout_below="@+id/profile_data_user_name"
                android:layout_toRightOf="@+id/profile_data_user_image"
                android:layout_toEndOf="@+id/profile_data_user_image"
                android:paddingLeft="@dimen/header_left_padding" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:text="New Text"
                android:id="@+id/profile_data_user_provider"
                android:layout_alignBottom="@+id/profile_data_user_image"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_password_title"
        android:id="@+id/textView2"
        android:layout_below="@+id/profile_data_user_card"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="8dp"
        android:paddingTop="16dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/profile_password_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_profile_password"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:text="@string/profile_password_change_title"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/secondary_text_default_material_light" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:src="@drawable/ic_profile_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
